@startuml Ballesta

skinparam ClassAttributeIconSize 0
hide circle


class Objetos <<Abstract>>{
    - Integer peso
    - String nombre
}


class Armas <<Abstract>> {
    - Integer alcance
    - Integer danio
    + Atacar () : abstract
    + RecargarArma (Objetos obj)
}

class Ballesta {
    - Flechas flecha
}

class Flechas {
    - Integer danio
    - Integer cantidad
    + UsarFlecha()
}


Objetos <|-- Armas
Objetos <|- Flechas
Armas <|-- Ballesta

Flechas <- Ballesta


@enduml
